force-app/main/default/objects/QuoteLineItem/fields/Cancelled_LineItem__c.field-meta.xml
<CustomField>
    <fullName>Cancelled_LineItem__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cancelled LineItem</label>
    <type>Checkbox</type>
</CustomField>