force-app/main/default/objects/QuoteLineItem/fields/CreatedAsset__c.field-meta.xml
<CustomField>
    <fullName>CreatedAsset__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CreatedAsset</label>
    <type>Checkbox</type>
</CustomField>