force-app/main/default/objects/QuoteLineItem/fields/OLI_Status__c.field-meta.xml
<CustomField>
    <fullName>OLI_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Entitlement Processing Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>